--- a/content/posts/v1.34.0.md
+++ b/content/posts/v1.34.0.md
@@ -1,5 +1,5 @@
 ---
-title: Auto title generation for ChatGPT and Claude webapp
+title: Automated Title Generation for ChatGPT and Claude webapp mode
 date: Aug 08, 2023
 version: "1.34.0"
 ---
